<resources>
    <string name="app_name">MyBills</string>
    <!-- AuthActivity -->
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Contraseña</string>
    <string name="repeatPasswordHint">Repite la contraseña</string>
    <string name="terminos_cb">Acepto los terminos y condiciones</string>
    <string name="termsAndConditions">
        Por favor, lee atentamente estos términos y condiciones antes de usar nuestra aplicación móvil.\n\n

        1. Aceptación de los Términos y Condiciones:\n

        Al registrarte y utilizar nuestra aplicación móvil, aceptas y te comprometes a cumplir estos términos y condiciones. Si no estás de acuerdo con alguno de estos términos, no podrás utilizar nuestra aplicación.\n\n

        2. Uso de la Aplicación:\n

        Nuestra aplicación está destinada para uso personal y no comercial. No podrás utilizar nuestra aplicación de ninguna manera que viole las leyes, reglamentos o derechos de terceros.\n\n

        3. Privacidad:\n

        Respetamos tu privacidad y estamos comprometidos a proteger tus datos personales. Nuestra política de privacidad explica cómo recopilamos, utilizamos y protegemos tus datos personales. Al utilizar nuestra aplicación, aceptas nuestras prácticas de privacidad.\n\n

        4. Seguridad:\n

        Implementamos medidas de seguridad para proteger tus datos personales contra accesos no autorizados, uso indebido o divulgación.\n

        5. Propiedad Intelectual:\n

        Todos los derechos de propiedad intelectual relacionados con nuestra aplicación y su contenido (incluyendo pero no limitado a código fuente, diseño, gráficos, etc.) son propiedad nuestra y están protegidos por las leyes de propiedad intelectual.\n\n

        6. Limitación de Responsabilidad:\n

        En ningún caso seremos responsables por daños directos, indirectos, incidentales, especiales o consecuentes que surjan del uso o la imposibilidad de utilizar nuestra aplicación.\n\n

        7. Terminación del Servicio:\n

        Nos reservamos el derecho de suspender o cancelar tu cuenta y el acceso a nuestra aplicación en caso de violación de estos términos y condiciones o por cualquier otra razón a nuestra discreción.\n\n

        8. Modificaciones de los Términos y Condiciones:\n

        Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Cualquier modificación será efectiva inmediatamente después de su publicación en nuestra aplicación. Te notificaremos sobre los cambios significativos a través de un aviso en nuestra aplicación.\n\n

        9. Legislación Aplicable:\n

        Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del Estado de [Estado correspondiente], sin tener en cuenta sus disposiciones sobre conflictos de leyes.\n\n
    </string>
    <string name="resetPasswordMessage">Introduce tu e-mail, se enviara un enlace para resetear la contraseña.</string>
    <string name="navigation_open_drawer">Abrir</string>
    <string name="navigation_close_drawer">Cerrar</string>
    <string name="signUp_btn">Registrarse</string>
    <string name="signInText_tv">¿Ya tienes cuenta?</string>
    <string name="signIn_tv">Inicia sesión.</string>
    <string name="resetPassword_tv">¿Has olvidado tu contraseña?</string>
    <string name="signIn_btn">Iniciar Sesión</string>
    <string name="signUpText_tv">¿No tienes cuenta?</string>
    <string name="signUp_tv">Registrate.</string>

    <!-- HOME ACTIVITY -->
    <array name="billTypeOptions">
        <item>@string/billTypeOptions_Cuentas</item>
        <item>@string/billTypeOptions_Alimentacion</item>
        <item>@string/billTypeOptions_Vivienda</item>
        <item>@string/billTypeOptions_Transporte</item>
        <item>@string/billTypeOptions_Ropa</item>
        <item>@string/billTypeOptions_Salud</item>
        <item>@string/billTypeOptions_Ocio</item>
        <item>@string/billTypeOptions_Otros</item>
    </array>

    <string name="billTypeOptions_Cuentas">Cuentas y pagos</string>
    <string name="billTypeOptions_Alimentacion">Alimentación</string>
    <string name="billTypeOptions_Vivienda">Vivienda</string>
    <string name="billTypeOptions_Transporte">Transporte</string>
    <string name="billTypeOptions_Ropa">Ropa</string>
    <string name="billTypeOptions_Salud">Salud e higiene</string>
    <string name="billTypeOptions_Ocio">Ocio</string>
    <string name="billTypeOptions_Otros">Otros</string>

    <array name="yearMonths">
        <item>@string/month_january</item>
        <item>@string/month_february</item>
        <item>@string/month_march</item>
        <item>@string/month_april</item>
        <item>@string/month_may</item>
        <item>@string/month_june</item>
        <item>@string/month_july</item>
        <item>@string/month_august</item>
        <item>@string/month_september</item>
        <item>@string/month_october</item>
        <item>@string/month_november</item>
        <item>@string/month_december</item>
    </array>

    <array name="years">
        <item>@string/year_2015</item>
        <item>@string/year_2016</item>
        <item>@string/year_2017</item>
        <item>@string/year_2018</item>
        <item>@string/year_2019</item>
        <item>@string/year_2020</item>
        <item>@string/year_2021</item>
        <item>@string/year_2022</item>
        <item>@string/year_2023</item>
        <item>@string/year_2024</item>
        <item>@string/year_2025</item>
        <item>@string/year_2026</item>
        <item>@string/year_2027</item>
        <item>@string/year_2028</item>
        <item>@string/year_2029</item>
        <item>@string/year_2030</item>
    </array>

    <string name="month_january">Enero</string>
    <string name="month_february">Febrero</string>
    <string name="month_march">Marzo</string>
    <string name="month_april">Abril</string>
    <string name="month_may">Mayo</string>
    <string name="month_june">Junio</string>
    <string name="month_july">Julio</string>
    <string name="month_august">Agosto</string>
    <string name="month_september">Septiembre</string>
    <string name="month_october">Octubre</string>
    <string name="month_november">Noviembre</string>
    <string name="month_december">Diciembre</string>

    <string name="year_2015">2015</string>
    <string name="year_2016">2016</string>
    <string name="year_2017">2017</string>
    <string name="year_2018">2018</string>
    <string name="year_2019">2019</string>
    <string name="year_2020">2020</string>
    <string name="year_2021">2021</string>
    <string name="year_2022">2022</string>
    <string name="year_2023">2023</string>
    <string name="year_2024">2024</string>
    <string name="year_2025">2025</string>
    <string name="year_2026">2026</string>
    <string name="year_2027">2027</string>
    <string name="year_2028">2028</string>
    <string name="year_2029">2029</string>
    <string name="year_2030">2030</string>

    <string name="delete_bill">Se va a borrar permanentemente. ¿Continuar?</string>
    <string name="default_web_client_id">1:28966169115:android:d0fb44e36431690ccce6be</string>

    <string name="toolbarTitleHome">Home</string>
    <string name="toolbarTitleReport">Informes</string>
    <string name="toolbarTitleCalendar">Calendario</string>
    <string name="toolbarTitleBills">Gastos</string>
    <string name="fechaHint">Fecha</string>
    <string name="hoyString">Hoy</string>
    <string name="importeHint">Importe</string>
    <string name="descripcionHint">Descripción</string>
    <string name="aceptarString">Aceptar</string>
    <string name="cancelarString">Cancelar</string>
    <string name="monthPickerTitle">Elige un mes</string>
    <string name="PieChartTitle">Gastos de este mes:</string>
    <string name="weekRecyclerTitle">Esta semana</string>
    <string name="monthRecyclerTitle">Este mes</string>
    <string name="beforeRecyclerTitle">Anterior</string>
    <string name="reportResumen">Resumen:</string>
    <string name="noRegistryReport">No hay registros</string>
    <string name="googleSignInBtn">Inicia sesión con Google</string>
    <string name="ultimosRegistrosString">Ultimos registros:</string>
    <string name="showMoreBtn">Mostrar más</string>
    <string name="noRegistryCalendar">No hay registros para este dia</string>
    <string name="noRegistryMain">No hay registros para mostrar</string>
    <string name="signOutAlertTitle">Cerrar sesión.</string>
    <string name="signOutAlertMessage">Se cerrara la sesión de esta cuenta.</string>
    <string name="delete_bill_title">Borrar gasto.</string>
    <string name="addDatePicker_title">Selecciona una fecha.</string>
    <string name="notificationAlert_title">Permisos de notificaciones.</string>
    <string name="notificationAlert_message">MyBills requiere de los permisos de notificaciones para poder utilizar todas las funcionalidades.</string>
    <string name="emailSetError">Introduce un email válido</string>
    <string name="passwordSetError">Contraseña no válida</string>
    <string name="secondPasswordSetError">Las contraseñas no coinciden</string>
    <string name="passSetErrorInfo">La contraseña debe tener por lo menos 6 carácteres, una mayúscula y un número.</string>
    <string name="termsAndConditionsSnack">Debes aceptar nuestros terminos y condiciones.</string>
    <string name="genericSetInputError">Introduce los datos correctamente.</string>


</resources>