<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/plotTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/PieChartTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.androidplot.pie.PieChart
            android:id="@+id/bills_pc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/plotTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/total_tv"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="105€"
            app:layout_constraintBottom_toBottomOf="@+id/bills_pc"
            app:layout_constraintEnd_toEndOf="@id/bills_pc"
            app:layout_constraintStart_toStartOf="@id/bills_pc"
            app:layout_constraintTop_toTopOf="@+id/bills_pc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bills_pc">

            <LinearLayout
                android:id="@+id/legendCuentas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeCuentas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Cuentas"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendAlimentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeAlimentacion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Alimentacion"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendVivienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeVivienda" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Vivienda"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendTransporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeTransporte" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Transporte"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendRopa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeRopa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Ropa"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendSalud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeSalud" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Salud"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendOcio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeOcio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Ocio"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/legendOtros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/typeOtros" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billTypeOptions_Otros"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>